<resources>
    <string name="app_name">HumanRHDapp</string>
    <string name="none">Ninguno</string>
    <string name="selecciona_fecha">Selecciona una fecha</string>
    <string name="selecciona_hora">Selecciona una hora</string>
    <string name="total_dep">Total Departamento</string>
    <string name="conceptos">Conceptos</string>
    <string name="selecciona_concepto">Selecciona un concepto</string>
    <string name="sin_conceptos">Sin conceptos</string>
    <string name="supervisor">Supervisor</string>
    <string name="seleccionar_supervisor">Selecciona un supervisor</string>
    <string name="reporte">Reporte</string>
    <string name="descargas">Descargas</string>
    <string name="descargar_pdf">Descarga PDF</string>
    <string name="pdf_descargado">PDF descargado correctamente</string>
    <string name="error_descargar_PDF">Error al descargar el PDF</string>
    <string name="almacenamiento_interno">Almacenamiento Interno</string>
    <string name="seleccionar_motivo">Seleccionar un motivo</string>
    <string name="seleccionar_hora_inicial">Seleccionar una hora inicial</string>
    <string name="seleccionar_hora_final">Seleccionar una hora final</string>
    <string name="ingresar_comentario">Favor de ingresar un comentario</string>
    <string name="sin_info_motivos">Sin informacion de motivos</string>
    <string name="seleccionar_codid">Seleccionar Codigo de Identidad</string>
    <string name="codid">Codigo de Identidad</string>
    <string name="empleados_seleccionados">Empleados seleccionados</string>
    <string name="seleccionar_empleados">Seleccionar empleados</string>
    <string name="lista_Empleados">Lista de Empleados</string>
    <string name="empleado_seleccionado">Empleado seleccionado</string>
    <string name="seleccion_anio">Selecciona un año</string>
    <string name="hay">Hay</string>
    <string name="empleados_asistencia">de empleados con Asistencia</string>
    <string name="asistencia">Asistencia</string>
    <string name="button_refresh">Refrescar</string>
    <string name="todos_anios">Todos los años</string>
    <string name="empleados">Empleados</string>
    <string name="grupo">Grupo : </string>
    <string name="secuencia">Secuencia : </string>
    <string name="fecha_inicio">Fecha Inicio : </string>
    <string name="fecha_termino">Fecha Termino : </string>
    <string name="dias_tomados">Dias Tomados : </string>
    <string name="aurotizar">Aurotizar</string>
    <string name="a_login_error_email_empty">Favor de ingresar su correo electrónico.</string>
    <string name="a_login_error_nip_empty">Favor de ingresar su contraseña.</string>
    <string name="validate_jwt">Tu sesion a finalizado.</string>
    <string name="login">Inicio de sesión</string>
    <string name="login_email">Usuario</string>
    <string name="login_email_hint">Escribe tu nombre de usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_botton_enter">Acceder</string>
    <string name="login_text_recover">¿No pudiste acceder a tu cuenta?</string>
    <string name="login_text_recover_password">Recuperar contraseña</string>
    <string name="login_human">Human RHD by VenturesSoft® S.A de C.V</string>
    <string name="list_company_title">Selecciona una empresa</string>
    <string name="list_company_positive">Seleccionar</string>
    <string name="list_company_negative">Cancelar</string>
    <string name="fna_title">Recuperar contraseña</string>
    <string name="fna_email">Usuario</string>
    <string name="fna_email_hint">Escribe tu nombre de usuario</string>
    <string name="fna_botton_enter">Recuperar</string>
    <string name="fna_title_dialog">Bien hecho</string>
    <string name="fna_message_dialog">Se ha enviado correctamente</string>
    <string name="fna_positive">Si</string>
    <string name="ausentismo">Buscar empleado </string>
    <string name="nombre_usuario"> Nombre</string>
    <string name="puesto_trabajo"> Puesto</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_menu">Menu</string>
    <string name="buscar_empleado">Buscar empleado</string>
    <string name="fragment_welcome">Bienvenido fragment</string>
    <string name="welcome_est">Relacion de entradas y salidas</string>
    <string name="welcome_time">Tiempo</string>
    <string name="welcome_time_hours">Horas</string>
    <string name="welcome_cost">Costo</string>
    <string name="month1">Enero</string>
    <string name="month2">Febrero</string>
    <string name="month3">Marzo</string>
    <string name="month4">Abril</string>
    <string name="month5">Mayo</string>
    <string name="month6">Junio</string>
    <string name="month7">Julio</string>
    <string name="month8">Agosto</string>
    <string name="month9">Septiembre</string>
    <string name="month10">Octubre</string>
    <string name="month11">Noviembre</string>
    <string name="month12">Diciembre</string>
    <string name="kardex_title">kardex del Mes de Enero del Año 2023</string>
    <string name="kardex_title1">Kardex del mes de </string>
    <string name="kardex_title2">del Año</string>
    <string name="encabezado_days">Días</string>
    <string name="welcome_kardex">No se han podido leer los datos por que no se encuentran</string>
    <string name="welcome_kardexSN">No hay registros para el mes seleccionado</string>
    <string name="fragment_opciones">Supervisor</string>
    <string name="menup_1">Control De Ausentismos</string>
    <string name="menup_2">Administración De Tiempos</string>
    <string name="menup_3">Configuracion</string>
    <string name="submenu_1">Vacaciones</string>
    <string name="submenu_2">Prog.Anual Vac.</string>
    <string name="submenu_3">Ausentismos</string>
    <string name="submenu_4">Permisos</string>
    <string name="submenu_5">Kardex Anual</string>
    <string name="submenu_6">Kardex Mensual</string>
    <string name="submenu_7">Reportes</string>
    <string name="submenu_8">Información General</string>
    <string name="submenu_9">Negociación De Horario</string>
    <string name="submenu_10">Entradas y Salidas</string>
    <string name="submenu_11">Preautorización De Tiempos Extra</string>
    <string name="submenu_12">Reportes.</string>
    <string name="submenu_13">Acerca De Human RHD</string>
    <string name="submenu_14">Cerrar Sesion</string>
    <string name="signoff_title">Cerrar sesión</string>
    <string name="signoff_message">¿Estas seguro que quieres salir de la App?</string>
    <string name="signoff_postive">Si</string>
    <string name="signoff_negative">No</string>
    <string name="ok">ok</string>
    <string name="no_hay_lista">No hay lista de usuarios</string>
    <string name="menu_title">REPORTES</string>
    <string name="menu_caption">Control de ausentismos</string>
    <string name="menu_vacaciones">Vacaciones</string>
    <string name="menu_incapacidades">Incapacidades</string>
    <string name="menu_ausentismos">Ausentismos</string>
    <string name="menu_permisos">Permisos</string>
    <string name="rvacacionesca">Periodo</string>
    <string name="rpca">Seleccionar</string>
    <string name="rpcaCancel">Cancelar</string>
    <string name="rpcaSelArea">Todos</string>
    <string name="rpcaSelCentro">Todos</string>
    <string name="rpcaSelLinea">Todos</string>
    <string name="rpcaenvio">Envio Exitoso</string>
    <string name="rpcaSearch">Buscar empleado</string>
    <string name="rangoDeFechas">El rango de fechas es incorrecto</string>
    <string name="vrpcaInicio">Inicio</string>
    <string name="vrpcaFin">Inicio</string>
    <string name="vrpcaDepartamento">Departamento</string>
    <string name="vrpcaArea">Area</string>
    <string name="vrpcaSeleArea">Selecciona una area</string>
    <string name="vrpcaCentro">Centro</string>
    <string name="vrpcaSeleCentro">Selecciona un centro</string>
    <string name="vrpcaLinea">Linea</string>
    <string name="vrpcaSeleLinea">Selecciona una linea</string>
    <string name="vrpcaTodos">Todos</string>
    <string name="vrpcaFormato">Formato de Reporte</string>
    <string name="vrpcaRetardos">Retardos</string>
    <string name="vrpcaUsuarios">Usuarios</string>
    <string name="rhca">Seleccionar solo una opcion</string>
    <string name="sin_infomacion">Sin informacion disponible</string>
    <string name="vrhcaProgramacion">Programacion</string>
    <string name="vrhcaSalidas">Salidas</string>
    <string name="vrhcaUsuarios">Usuarios</string>
    <string name="kmDescansos">Descansos</string>
    <string name="kmFestivos">Festivos</string>
    <string name="kmAusentismos">Ausentismos</string>
    <string name="kmRetardo">Retardo</string>
    <string name="fpTitulo">Alta de Permisos</string>
    <string name="fpRegistrar">Registrar</string>
    <string name="fpNuevaSolicitud">Nueva Solicitud</string>
    <string name="fpConcepto">Concepto</string>
    <string name="fpFecha">Fecha</string>
    <string name="fpHoraInicio">Hora Inicio</string>
    <string name="fpHoraFin">Hora Fin</string>
    <string name="fpComentarios">Comentarios</string>
    <string name="fpObservaciones">Observaciones</string>
    <string name="fpMotivo">Motivo</string>
    <string name="faTitulo">Alta de Ausentismos</string>
    <string name="faMotivo">Motivo</string>
    <string name="faFechaInicial">Fecha Inicial</string>
    <string name="faDias">Días</string>
    <string name="faDia">Día</string>
    <string name="fpavTitulo">Programacion Anual Vacaciones</string>
    <string name="fpaSolicitar">Solicitar</string>
    <string name="fpaListaSolicitud">Ir a Lista de Solicitudes</string>
    <string name="fpaAl">Al</string>
    <string name="fpaGrupo">Grupo</string>
    <string name="fpaFactor">Factor</string>
    <string name="fpaDiasTomados">Dias Tomados</string>
    <string name="fvTitulo">Alta de Vacaciones</string>
    <string name="fvDiasVacaciones">Dias de Vacaciones</string>
    <string name="fvDiasPorDisfrutar">Días por disfrutar</string>
    <string name="fvSeleccionarFecha">Seleccionar Fecha</string>
    <string name="f">Faltas</string>
    <string name="v">Día de Vacaciones</string>
    <string name="others">Día Inactivo</string>
    <string name="descansos">Día de descanso</string>
    <string name="Festivos">Día festivo</string>
    <string name="Ausentismos">Día de Ausentismo</string>
    <string name="Retardos">Retardo</string>
    <string name="otros">Todas las fechas no se pueden seleccionar</string>
    <string name="kaMeses">Meses</string>
    <string name="kaEnero">Enero</string>
    <string name="kaFebrero">Febrero</string>
    <string name="kaMarzo">Marzo</string>
    <string name="kaAbril">Abril</string>
    <string name="kaMayo">Mayo</string>
    <string name="kaJunio">Junio</string>
    <string name="kaJulio">Julio</string>
    <string name="kaAgosto">Agosto</string>
    <string name="kaSeptiembre">Septiembre</string>
    <string name="kaOctubre">Octubre</string>
    <string name="kaNoviembre">Noviembre</string>
    <string name="kaDiciembre">Diciembre</string>
    <string name="menuAT_caption">Administración de tiempos</string>
    <string name="menuAT_entradas_salidas">Vacaciones</string>
    <string name="hind_anio">Selecciona el año</string>
    <string name="ATFormato_de_Reporte">Formato de Reporte</string>
    <string name="ATImpresion_por_Empleado">Impresion por Empleado</string>
    <string name="ATEmpleados_inactivos">Empleados inactivos</string>
    <string name="ATMR_activo">MR activo</string>
    <string name="ATCuenta_Contable">Cuenta Contable</string>
    <string name="ATVisualizacion_de_informacion">Visualizacion de informacion</string>
    <string name="ATGeneral">General</string>
    <string name="ATDetalle">Detalle</string>
    <string name="ATTipo_de_reporte_hint">Descripcion por empleado</string>
    <string name="ATAnio">Año</string>
    <string name="ATNegociacion_Horario">Negociacion Horario</string>
    <string name="ATTiempo_extra">Tiempo extra</string>
</resources>