<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.ui.fragments.RecoverPasswordFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:gravity="center"
        android:adjustViewBounds="true"
        android:src="@drawable/logohumanrhd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailRecover"
        style="@style/InputLayoutRHD"
        android:layout_width="match_parent"
        android:hint="@string/login_email"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_recover">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        style="@style/TextSubtitleRHD"
        android:layout_width="match_parent"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/fna_title"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/recoverButton"
        style="@style/ButtonRHD"
        android:layout_width="match_parent"
        android:text="@string/fna_botton_enter"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/emailRecover" />


</androidx.constraintlayout.widget.ConstraintLayout>